# PlaylistDownloader

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spotipy_api_key.ini  version.py
.github/workflows/: URL_Checker.yml
api/: main.py
api/routers/: downloader.py  soundcloud.py  spotify.py  upload.py  youtube.py
api/services/: downloader.py  soundcloud.py  spotify.py  upload.py  youtube.py
data/: random-list.txt  soundcloud-list.txt  spotify-list.txt  youtube-list.txt
docs/: about.md  contacts.md  index.md
examples/: random-playlist.py  random_playlist.py  soundcloud-list.py  spotify-playlist.py  spotipy_api_key.ini  youtube-list.py  youtube_list.py
examples/data/: spotify-list.txt  youtube-list.txt
examples/flask/: rest.py
examples/flask/public/: index.html
notebooks/: example.ipynb
playlist_downloader/: __init__.py  downloader.py
playlist_downloader/playlist/: PlaylistStrategy.py  Song.py  SoundCloud.py  Spotify.py  Youtube.py
playlistdownloader/: PlaylistFileStrategy.py  __init__.py  common.py  constants.py  downloader.py
playlistdownloader/playlist/: PlaylistStrategy.py  Song.py  SoundCloud.py  Spotify.py  Youtube.py
rest/: config.ini  rest.py
rest/data/: spotify-list.txt
rest/public/: index.html
scripts/: youtube-dl.sh
tests/data/: spotify-list.txt
tests/playlist_downloader/: test_LoadPlaylistFileStrategy.py  test_playlistDownloader.py
tests/playlistdownloader/: test_LoadPlaylistFileStrategy.py  test_playlistDownloader.py
