[tool.poetry]
name = "playlistdownloader"
version = "1.0.1"
description = "Download a playlist (spotify, youtube) by finding  download the mp3 of the music video youtube"
authors = ["Antoine Boucher <antoine.boucher012@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/antoinebou12/playlistdownloader"
homepage = "https://github.com/antoinebou12/playlistdownloader"
documentation = "http://github.com/antoineboucher/marketwatch/wiki"
keywords = ["youtube", "spotify", "playlist", "downloader", "music", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
youtube_dl = "^2021.12.17"
spotipy = "^2.23.0"
bs4 = "^0.0.1"
typer = "^0.9.0"
rich = "^13.3.5"
httpx = "^0.24.0"
pytest-cov = "^4.0.0"
beautifulsoup4 = "^4.12.2"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
werkzeug = "^2.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
sphinx = "^7.0.0"
pre-commit = "^3.0.0"
black = "^23.1.0"
genbadge = "^1.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
